# taurisight

./: .gitignore  LICENSE  README.md  index.html  package.json  plan.md  pnpm-lock.yaml
.github/workflows/: main.yml
public/: about.md
scripts/: sync-version.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/models/: README.md  labels.txt
src-tauri/src/: lib.rs  main.rs
src/i18n/: en.json  pt.json
